# listscope

./: .clang-format  CMakeLists.txt
scripts/: format.sh
src/: CMakeLists.txt  ast.cpp  environment.cpp  lexer.cpp  main.cpp  parser.cpp
src/include/: JITCompiler.hpp  ast.hpp  environment.hpp  lexer.hpp  parser.hpp
